# open-api/immich-openapi-specs.json
@@ -2816,7 +2816,7 @@
     },
     "/libraries/{id}/removeDeleted": {
       "post": {
-        "operationId": "scanRemovedAssets",
+        "operationId": "removeDeletedAssets",
         "parameters": [
           {
             "name": "id",
@@ -8354,9 +8354,6 @@
           "isFavorite": {
             "type": "boolean"
           },
-          "isOffline": {
-            "type": "boolean"
-          },
           "isTrashed": {
             "type": "boolean"
           },
@@ -8446,7 +8443,6 @@
           "id",
           "isArchived",
           "isFavorite",
-          "isOffline",
           "isTrashed",
           "localDateTime",
           "originalFileName",
